--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                         <p class="mt-5 brand-icons-spacing" style="padding-bottom: 10px;">
                             <a href="https://github.com/arifng" target="_blank" title="Github">
                                 <i class="fab fa-github text-white-75 brand-icons-top"></i></a>
-                            <a href="https://www.linkedin.com/in/mdarifulislamrana/" target="_blank" title="LinkedIn">
+                            <a href="https://www.linkedin.com/in/arifng/" target="_blank" title="LinkedIn">
                                 <i class="fab fa-linkedin-in text-white-75 brand-icons-top"></i></a>
                             <a href="https://arifng.medium.com/" target="_blank" title="Medium">
                                 <i class="fab fa-medium-m text-white-75 brand-icons-top"></i></a>
@@ -657,7 +657,7 @@
                     <div class="mt-5 brand-icons-spacing">
                         <a href="https://github.com/arifng" target="_blank" title="Github">
                             <i class="fab fa-github fa-2x text-black-50"></i></a>
-                        <a href="https://www.linkedin.com/in/mdarifulislamrana/" target="_blank" title="LinkedIn">
+                        <a href="https://www.linkedin.com/in/arifng/" target="_blank" title="LinkedIn">
                             <i class="fab fa-linkedin-in fa-2x text-black-50"></i></a>
                         <a href="https://arifng.medium.com/" target="_blank" title="Medium">
                             <i class="fab fa-medium-m fa-2x text-black-50"></i></a>
