Added new company in experience section

--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
                         <td class="col-md-3 category"> <i class="fas fa-sliders-h text-primary"></i>
                             <span class="font-weight-bold"> Others</span></td>
                         <td class="col-md-9">Issue Tracker – Jira, Build tool – Maven, SCRUM, DevOps - Apache Tomcat,
-                            Nginx, Jenkins  </td>
+                            Nginx, Jenkins, AWS, Docker  </td>
                     </tr>
                 </table>
             </div>
@@ -172,6 +172,65 @@
             <div class="container" style="text-align: center">
                 <h2 class="text-center mt-0">Professional History</h2>
                 <hr class="divider my-4" />
+
+                <div class="row justify-content-center">
+                    <div class="mt-5">
+                        <img class="img-fluid comp-logo" src="assets/img/other/edreams-logo.jpg" alt="" />
+                        <a href="https://www.edreamsodigeo.com/" target="_blank">
+                            <span class="h4 mb-2" style="vertical-align: bottom">eDreams ODIGEO</span>
+                        </a>
+                        <h6 class="designation">Senior Java Software Engineer</h6>
+                        <h6 class="duration">Since July, 2023</h6>
+                    </div>
+                </div>
+                <div class="justify-content-center">
+                    <div class="h5 font-weight-bold toggle-content">Roles <i class="fas fa-plus"></i></div>
+                    <div class="details-content">
+                        <div>
+                            <i class="fas fa-caret-right text-primary"></i>
+                            <span> Developing feature following company guidelines from the feature requirements to delivery in production.</span>
+                        </div>
+                        <div>
+                            <i class="fas fa-caret-right text-primary"></i>
+                            <span> Communicating with product owner and other teams for feature developments.</span>
+                        </div>
+                        <div>
+                            <i class="fas fa-caret-right text-primary"></i>
+                            <span> Monitoring applications and taking necessary steps to keep it run smoothly.</span>
+                        </div>
+                    </div>
+                </div>
+                <div class="justify-content-center">
+                    <div class="h5 font-weight-bold toggle-content">Key Achievements <i class="fas fa-plus"></i></div>
+                    <div class="details-content">
+                        <div>
+                            <i class="fas fa-caret-right text-primary"></i>
+                            <span> Developed a microservice that process finance file and remove manual process to settle financial matters efficiently.</span>
+                        </div>
+                        <div>
+                            <i class="fas fa-caret-right text-primary"></i>
+                            <span> Scored property based on their selling by unique ID regardless of vendor specific content.</span>
+                        </div>
+                    </div>
+                </div>
+                <div class="justify-content-center">
+                    <div class="h5 font-weight-bold toggle-content">Projects <i class="fas fa-plus"></i></div>
+                    <div class="details-content">
+                        <div>
+                            <span class="font-weight-bold text-primary">OdigeoConnect Finance</span>
+                            <span> – Reconcile finance files, a microservice. Development includes tools & technologies -
+                                BE (Java 11, Jakarta EE, Hibernate, TestNG, Cucumber, Docker, Apache Kafka, Jenkins, SonarQube, Docker),
+                                DB - Oracle, IDE - IntelliJ IDEA, Bitbucket, GCS, JBoss.</span>
+                        </div>
+                        <div>
+                            <span class="font-weight-bold text-primary">Accommodation scoring</span>
+                            <span> – Sorting property based using machine learning. Development includes tools & technologies -
+                                BE (Java 11, Jakarta EE, Hibernate, TestNG, Cucumber, Docker, Apache Kafka, Jenkins, SonarQube, Docker),
+                                DB - Oracle, IDE - IntelliJ IDEA, Bitbucket, GCS, JBoss.</span>
+                        </div>
+                    </div>
+                </div>
+
                 <div class="row justify-content-center">
                     <div class="mt-5">
                         <img class="img-fluid comp-logo" src="assets/img/other/impel-logo.png" alt="" />
@@ -179,7 +238,7 @@
                             <span class="h4 mb-2" style="vertical-align: bottom">Impel IT Solutions Ltd</span>
                         </a>
                         <h6 class="designation">Senior Software Engineer | Team Lead</h6>
-                        <h6 class="duration">Since August, 2017</h6>
+                        <h6 class="duration">August, 2017 - June, 2023</h6>
                     </div>
                 </div>
                 <div class="justify-content-center">
@@ -241,7 +300,8 @@
                         <div>
                             <i class="fas fa-caret-right text-primary"></i>
                             <span> PDF reports generation using Jasper report, also read write Barcode of PDF.</span>
-                        </div><div>
+                        </div>
+                        <div>
                             <i class="fas fa-caret-right text-primary"></i>
                             <span> Fixing memory leak problem using Eclipse MAT by analyzing heap dump.</span>
                         </div>
@@ -258,9 +318,15 @@
                             <span class="font-weight-bold text-primary">ZorgFlex</span>
                             <span> – Automation of Home care system, a MVC project. Development includes tools & technologies -
                                 BE (Java 8, Spring framework – Spring MVC, Spring security, Spring Data JPA, Spring
-                                Websocket etc, Hibernate, Ehcache, HikariCP, FlywayDB, Jasper Report, Thymeleaf),
-                                DB - MySQL, FE (Html, CSS, jQuery, Stomp + SockJS etc),IDE - IntelliJ IDEA, GitHub,
+                                Websocket etc, Hibernate, Ehcache, HikariCP, FlywayDB, Jasper Report, Thymeleaf, Apache Kafka, AWS),
+                                DB - MySQL, FE (Html, CSS, jQuery, Stomp + SockJS etc), IDE - IntelliJ IDEA, GitHub,
                                 Tomcat 7, Nginx etc.</span>
+                        </div>
+                        <div>
+                            <span class="font-weight-bold text-primary">ZorgFlex Vecozo Connector</span>
+                            <span> – A microservice which works as an intermediate node between ZorgFlex main application and Vecozo.
+                                Development includes tools & technologies - BE (Java 11, Spring framework, Spring Boot, Hibernate,
+                                HikariCP, Apache Kafka, AWS), DB - MySQL, IDE - IntelliJ IDEA, GitHub, Tomcat etc.</span>
                         </div>
                     </div>
                 </div>
@@ -543,7 +609,7 @@
                 <div class="owl-carousel owl-theme">
                     <div class="item owl-item-custom">
                         <div class="owl-item-img-div blog-item-top">
-                            <img class="owl-item-img" src="assets/img/other/bl_ijet.gif">
+                            <img class="owl-item-img" src="assets/img/other/bl_ijet.gif" alt="IJET">
                         </div>
                         <div class="blog-item-title">
                             <h5>Comparison of LMS and FDAF Algorithms in Equalization of Fading Channel</h5>
@@ -583,7 +649,7 @@
                     </div>
                     <div class="item owl-item-custom">
                         <div class="owl-item-img-div blog-item-top">
-                            <img class="owl-item-img" src="assets/img/other/bl_tenant.jpg">
+                            <img class="owl-item-img" src="assets/img/other/bl_tenant.jpg" alt="Tenant">
                         </div>
                         <div class="blog-item-title">
                             <h5>Best Way To Pass Tenant ID To New Thread In Java</h5>
