Added ideascale in experience section

--- a/index.html
+++ b/index.html
@@ -172,7 +172,75 @@
             <div class="container" style="text-align: center">
                 <h2 class="text-center mt-0">Professional History</h2>
                 <hr class="divider my-4" />
-
+                <!-- IdeaScale -->
+                <div class="row justify-content-center">
+                    <div class="mt-5">
+                        <img class="img-fluid comp-logo" src="assets/img/other/ideascale-logo.png" alt="" />
+                        <a href="https://ideascale.com/" target="_blank">
+                            <span class="h4 mb-2" style="vertical-align: bottom">IdeaScale Bangladesh Ltd</span>
+                        </a>
+                        <h6 class="designation">Senior Software Engineer</h6>
+                        <h6 class="duration">Since February, 2024</h6>
+                    </div>
+                </div>
+                <div class="justify-content-center">
+                    <div class="h5 font-weight-bold toggle-content">Roles <i class="fas fa-plus"></i></div>
+                    <div class="details-content">
+                        <div>
+                            <i class="fas fa-caret-right text-primary"></i>
+                            <span> Participate in SDLC and contribute to the software development process using Scrum methodology.</span>
+                        </div>
+                        <div>
+                            <i class="fas fa-caret-right text-primary"></i>
+                            <span> Collaborate with cross-functional teams to design, develop and maintain microservices using Java and MySQL.</span>
+                        </div>
+                        <div>
+                            <i class="fas fa-caret-right text-primary"></i>
+                            <span> Deploy applications on AWS and monitor application performance.</span>
+                        </div>
+                        <div>
+                            <i class="fas fa-caret-right text-primary"></i>
+                            <span> Employ GitHub Copilot to enhance development efficiency through AI-powered code suggestions.</span>
+                        </div>
+                    </div>
+                </div>
+                <div class="justify-content-center">
+                    <div class="h5 font-weight-bold toggle-content">Key Achievements <i class="fas fa-plus"></i></div>
+                    <div class="details-content">
+                        <div>
+                            <i class="fas fa-caret-right text-primary"></i>
+                            <span> Improve application performance by analysing database query and indexing.</span>
+                        </div>
+                        <div>
+                            <i class="fas fa-caret-right text-primary"></i>
+                            <span> Proving good contribution to the workspace migration of the whole software ecosystem.</span>
+                        </div>
+                    </div>
+                </div>
+                <div class="justify-content-center">
+                    <div class="h5 font-weight-bold toggle-content">Projects <i class="fas fa-plus"></i></div>
+                    <div class="details-content">
+                        <div>
+                            <span class="font-weight-bold text-primary">IdeaScale App</span>
+                            <span> – Manage innovations and ideas. Development includes tools & technologies -
+                                Java 21, Spring Framework, EclipseLink, Docker, Apache Kafka, Github, Github Actions, Github Copilot,
+                                AWS, Docker, Kubernetes, Redis, Elasticsearch, DB - MySQL, IDE - IntelliJ IDEA.</span>
+                        </div>
+                        <div>
+                            <span class="font-weight-bold text-primary">IdeaScale Batch</span>
+                            <span> – Process heavy jobs asynchronously Development includes tools & technologies -
+                                Java 21, Spring Framework, EclipseLink, Docker, Apache Kafka, Github, Github Actions, Github Copilot,
+                                AWS, Docker, Kubernetes, Redis, Elasticsearch, DB - MySQL, IDE - IntelliJ IDEA.</span>
+                        </div>
+                        <div>
+                            <span class="font-weight-bold text-primary">Notification Api</span>
+                            <span> – Sorting property based using machine learning. Development includes tools & technologies -
+                                Java 21, Spring Framework, EclipseLink, Docker, Apache Kafka, Github, Github Actions, Github Copilot,
+                                AWS, Docker, Kubernetes, DB - MySQL, IDE - IntelliJ IDEA.</span>
+                        </div>
+                    </div>
+                </div>
+                <!-- eDreams -->
                 <div class="row justify-content-center">
                     <div class="mt-5">
                         <img class="img-fluid comp-logo" src="assets/img/other/edreams-logo.jpg" alt="" />
@@ -230,7 +298,7 @@
                         </div>
                     </div>
                 </div>
-
+                <!-- Impel IT -->
                 <div class="row justify-content-center">
                     <div class="mt-5">
                         <img class="img-fluid comp-logo" src="assets/img/other/impel-logo.png" alt="" />
@@ -330,7 +398,7 @@
                         </div>
                     </div>
                 </div>
-
+                <!-- Vizrt -->
                 <div class="row justify-content-center">
                     <div class="mt-5">
                         <img class="img-fluid comp-logo" src="assets/img/other/vizrt-logo.png" alt="" />
@@ -417,7 +485,7 @@
                         </p>
                     </div>
                 </div>
-
+                <!-- Metatude -->
                 <div class="row justify-content-center">
                     <div class="mt-5">
                         <img class="img-fluid comp-logo" src="assets/img/other/metatude-logo.png" alt="" />
