update duration in experience section

--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
                         <p class="text-white mb-4">I'm a <span class="font-weight-bold">Full Stack Software Engineer</span>,
                             heavily focused on backend. I'm skilled at developing enterprise leveled high performing
                             application.</p>
-                        <p class="text-white mb-4">Having <span class="font-weight-bold">9+ years</span> professional
+                        <p class="text-white mb-4">Having <span class="font-weight-bold">13 years</span> professional
                             experience with a demonstrated history of working in the software industry. Skilled in Java,
                             Spring Framework, Hibernate, GWT, MySQL and more versatile technologies. Experience of large-scale
                             enterprise software development in survey system, media asset management and home care
@@ -180,7 +180,7 @@
                             <span class="h4 mb-2" style="vertical-align: bottom">IdeaScale Bangladesh Ltd</span>
                         </a>
                         <h6 class="designation">Senior Software Engineer</h6>
-                        <h6 class="duration">Since February, 2024</h6>
+                        <h6 class="duration">February, 2024 - January, 2024</h6>
                     </div>
                 </div>
                 <div class="justify-content-center">
