--- a/index.html
+++ b/index.html
@@ -774,7 +774,7 @@
                 <div class="row">
                     <div class="col-lg-4 ml-auto text-center mb-5 mb-lg-0">
                         <i class="fas fa-phone fa-3x mb-3 text-muted"></i>
-                        <div><a href="tel:+880 1755-649532">+880 1755-649532</a></div>
+                        <div><a href="tel:+880 1755-649532">+1 (470) 546-9212</a></div>
                     </div>
                     <div class="col-lg-4 mr-auto text-center">
                         <i class="fas fa-envelope fa-3x mb-3 text-muted"></i>
@@ -805,7 +805,7 @@
                 </div>
                 <br/>
                 <div class="small text-center text-muted">
-                    <p><i class="fas fa-map-marker-alt"></i> Dhaka, Bangladesh</p>
+                    <p><i class="fas fa-map-marker-alt"></i> Milton, GA, USA</p>
                 </div>
             </div>
         </footer>
