--- a/index.html
+++ b/index.html
@@ -774,7 +774,7 @@
                 <div class="row">
                     <div class="col-lg-4 ml-auto text-center mb-5 mb-lg-0">
                         <i class="fas fa-phone fa-3x mb-3 text-muted"></i>
-                        <div><a href="tel:+880 1755-649532">+1 (470) 546-9212</a></div>
+                        <div><a href="tel:+1 (470) 546-9212">+1 (470) 546-9212</a></div>
                     </div>
                     <div class="col-lg-4 mr-auto text-center">
                         <i class="fas fa-envelope fa-3x mb-3 text-muted"></i>
