--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                         <hr class="divider my-4" />
                     </div>
                     <div class="col-lg-8 align-self-baseline">
-                        <p class="text-white-75 font-weight-light mb-5">Full Stack Software Engineer</p>
+                        <p class="text-white-75 font-weight-light mb-5">Software Engineer</p>
                         <p class="mt-5 brand-icons-spacing" style="padding-bottom: 10px;">
                             <a href="https://github.com/arifng" target="_blank" title="Github">
                                 <i class="fab fa-github text-white-75 brand-icons-top"></i></a>
@@ -177,7 +177,7 @@
                     <div class="mt-5">
                         <img class="img-fluid comp-logo" src="assets/img/other/ideascale-logo.png" alt="" />
                         <a href="https://ideascale.com/" target="_blank">
-                            <span class="h4 mb-2" style="vertical-align: bottom">IdeaScale Bangladesh Ltd</span>
+                            <span class="h4 mb-2" style="vertical-align: bottom">IdeaScale</span>
                         </a>
                         <h6 class="designation">Senior Software Engineer</h6>
                         <h6 class="duration">February, 2024 - January, 2024</h6>
