--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <!-- Navigation-->
         <nav class="navbar navbar-expand-lg navbar-light fixed-top py-3" id="mainNav">
             <div class="container">
-                <a class="navbar-brand js-scroll-trigger" href="#page-top">Rana | Milton, GA, USA</a>
+                <a class="navbar-brand js-scroll-trigger" href="#page-top">Rana | Java, Spring, Kafka, AWS</a>
                 <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse"
                         data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false"
                         aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
@@ -767,15 +767,14 @@
                     <div class="col-lg-8 text-center">
                         <h2 class="mt-0">Get In Touch</h2>
                         <hr class="divider my-4" />
-                        <p class="mb-5 text-muted">Want to talk? Give me a call or send me
-                            an email and I will get back to you as soon as possible!</p>
+                        <p class="mb-5 text-muted">Send me an email and I will get back to you as soon as possible!</p>
                     </div>
                 </div>
                 <div class="row">
-                    <div class="col-lg-4 ml-auto text-center mb-5 mb-lg-0">
+                    <!-- <div class="col-lg-4 ml-auto text-center mb-5 mb-lg-0">
                         <i class="fas fa-phone fa-3x mb-3 text-muted"></i>
                         <div><a href="tel:+1 (470) 546-9212">+1 (470) 546-9212</a></div>
-                    </div>
+                    </div> -->
                     <div class="col-lg-4 mr-auto text-center">
                         <i class="fas fa-envelope fa-3x mb-3 text-muted"></i>
                         <a class="d-block" href="mailto:arifng@gmail.com">arifng@gmail.com</a>
@@ -805,7 +804,7 @@
                 </div>
                 <br/>
                 <div class="small text-center text-muted">
-                    <p><i class="fas fa-map-marker-alt"></i> Milton, GA, USA</p>
+                    <p><i class="fas fa-map-marker-alt"></i> Claymont, DE, USA</p>
                 </div>
             </div>
         </footer>
