--- a/index.html
+++ b/index.html
@@ -637,12 +637,12 @@
                         <h3 class="h4 mb-2 institute">Jahangirnagar University</h3>
                         <p class="text-white mb-4">
                             <span class="font-weight-bold">Master's degree</span> in <span class="font-weight-bold">
-                            Computer Science and Engineering</span> having Grade A (3.84/4.00) from 2011 to 2013.
+                            Computer Science and Engineering</span> having Grade A (3.84/4.00) from January to December, 2010.
                             Thesis topic: Eye Detection in Color Image using Morphological operation.
                         </p>
                         <p class="text-white mb-4">
                             <span class="font-weight-bold">Bachelor's degree</span> in <span class="font-weight-bold">
-                            ComputerScience and Engineering</span> having Grade A- (3.61/4.00) from 2006 to 2010.
+                            ComputerScience and Engineering</span> having Grade A- (3.61/4.00) from 2006 to 2009.
                             Thesis topic: Performance Improvement of a Wireless Link using Adaptive Equalizer.
                         </p>
 
