--- a/index.html
+++ b/index.html
@@ -771,11 +771,7 @@
                     </div>
                 </div>
                 <div class="row">
-                    <!-- <div class="col-lg-4 ml-auto text-center mb-5 mb-lg-0">
-                        <i class="fas fa-phone fa-3x mb-3 text-muted"></i>
-                        <div><a href="tel:+1 (470) 546-9212">+1 (470) 546-9212</a></div>
-                    </div> -->
-                    <div class="col-lg-4 mr-auto text-center">
+                    <div class="mr-auto text-center">
                         <i class="fas fa-envelope fa-3x mb-3 text-muted"></i>
                         <a class="d-block" href="mailto:arifng@gmail.com">arifng@gmail.com</a>
                     </div>
