--- a/index.html
+++ b/index.html
@@ -771,7 +771,7 @@
                     </div>
                 </div>
                 <div class="row">
-                    <div class="mr-auto text-center">
+                    <div class="col-lg-12 mr-auto text-center">
                         <i class="fas fa-envelope fa-3x mb-3 text-muted"></i>
                         <a class="d-block" href="mailto:arifng@gmail.com">arifng@gmail.com</a>
                     </div>
